<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.thyevolution.computerknowledgequiz.MainActivity">

    <ImageView
        style="@style/backgroundPicture"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/headlineStyle"
            android:text="@string/mainMenu"
            android:textStyle="bold" />

        <Button
            android:layout_marginTop="80dp"
            android:id="@+id/startGameBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/mainMenuAndSettingsButtonsStyle"
            android:layout_gravity="center"
            android:text="@string/startQuiz" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mainMenuAndSettingsButtonsStyle"
            android:layout_gravity="center"
            android:text="@string/settings" />

        <Button
            android:id="@+id/reviewBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mainMenuAndSettingsButtonsStyle"
            android:layout_gravity="center"
            android:text="@string/review"/>

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mainMenuAndSettingsButtonsStyle"
            android:layout_gravity="center"
            android:text="@string/exit" />

    </LinearLayout>
</RelativeLayout>