<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.thyevolution.computerknowledgequiz.quizSelectionActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/backgroundPicture"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/headlineStyle"

            android:text="@string/lvlSelEng"/>


        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:id="@+id/rgChoices">



            <RadioButton
                android:id="@+id/rbBeginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                style="@style/quizSelectionRbStyle"
                android:text="@string/beginnerEng"/>

            <RadioButton
                android:id="@+id/rbIntermediate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                style="@style/quizSelectionRbStyle"
                android:text="@string/intermediateEng"/>

            <RadioButton
                android:id="@+id/rbAdvanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                style="@style/quizSelectionRbStyle"
                android:text="@string/advanced"/>
        </RadioGroup>
        <Button
            android:id="@+id/choiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            style="@style/nextContinueFinishButtonsStyle"
            android:layout_gravity="center"
            android:text="@string/continuee" />
    </LinearLayout>


</RelativeLayout>